--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@ $color-primary-dark: #28b485;
 
 $color-grey-dark:#777;
 $color-white: #fff;
+$color-black: #000;
 
 *,
 *::after
@@ -39,24 +40,24 @@ body {
     background-position: top;
     
     clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
-}
 
-.logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
-
-.logo {
-    height: 3.5rem;
-}
-
-.text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    &__logo-box {
+        position: absolute;
+        top: 4rem;
+        left: 4rem;
+    }
+    
+    &__logo {
+        height: 3.5rem;
+    }
+    
+    &__text-box {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
 
 .heading-primary {
@@ -64,23 +65,25 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
+
+    &__main {
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        animation: moveInLeft 1s ease-out;
+    }
+    
+    &__sub {
+        display: block;
+        font-size: 2rem;
+        font-weight: 400;
+        letter-spacing: 1.75rem;
+        animation: moveInRight 1s ease-out;
+    }
 }
 
-.heading-primary-main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: moveInLeft 1s ease-out;
-}
 
-.heading-primary-sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 400;
-    letter-spacing: 1.75rem;
-    animation: moveInRight 1s ease-out;
-}
 
 /* Animation css */
 
@@ -128,8 +131,10 @@ body {
     }
 }
 
-.btn:link,
-.btn:visited {
+.btn { 
+
+    &:link,
+    &:visited {
     text-decoration: none;
     text-transform: uppercase;
     padding: 1.5rem 4rem;
@@ -138,24 +143,33 @@ body {
     transition: all .2s;
     position: relative;
     font-size: 1.6rem;
-}
+    }
 
-.btn:hover {
+   &:hover {
     transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
-}
+    box-shadow: 0 1rem 2rem rgba($color-black, .2);
+   
+   &:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+    }
+ }
 
-.btn:active {
+   &:active {
     transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-}
+    box-shadow: 0 .5rem 1rem rgba($color-black, .2);
+ }
 
-.btn-white {
+   &--white {
     background: $color-white;
     color: $color-grey-dark;
-}
 
-.btn::after {
+       &::after {
+          background: $color-white;
+        }
+    }
+
+   &::after {
     content: "";
     display: inline-block;
     height: 100%;
@@ -168,16 +182,8 @@ body {
     transition: all .4s;
 }
 
-.btn-white::after {
-    background: $color-white;
-}
-
-.btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
-
-.btn-animated {
+   &--animated {
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
-}
+     }
+  }
