--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,15 @@
-@import "abstracts/functions";
+@import "abstracts/function";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
 @import "base/base";
-@import "base/animation";
-@import "base/typography";
+@import "base/animations";
+@import "base/tipography";
 @import "base/utilities";
 
 @import "components/button";
 
 @import "layout/header";
+@import "layout/grid";
 
 @import "pages/home";
