--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,12 @@ $color-grey-dark:#777;
 $color-white: #fff;
 $color-black: #000;
 
+$color-grey-light-1: #f7f7f7;
+
+// Font size 
+
+$defaoult-font-size: 1.6rem;
+
 // grdi 
 
 $grid-width: 114rem;
