--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,6 +1,5 @@
 .row {
     max-width: $grid-width;
-    background: #fff;
     margin: 0 auto;
     
     &:not(:last-child) {
@@ -12,11 +11,8 @@
     @include clearfix;
 
     [class^="col-"] { 
-    padding: 2rem 0;
-    text-align: center;
     font-size: 1.5rem;
-    color: #fff;
-    background-color: #ff004c;
+    color: #2b2b2b;
     float: left;
 
     &:not(:last-child) {
