--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "base/tipography";
 @import "base/utilities";
 
+@import "components/feature-box";
 @import "components/composition";
 @import "components/button";
 
