--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,6 +10,13 @@ $color-black: #000;
 
 $color-grey-light-1: #f7f7f7;
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tretiary-light: #2998ff;
+$color-tretiary-dark: #5643fa;
+
+
 // Font size 
 
 $defaoult-font-size: 1.6rem;
