--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,14 @@ body {
     font-size: 6rem;
     font-weight: 100; }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 3px;
+  padding: 6rem; }
+
 .header {
   position: relative;
   height: 95vh;
@@ -381,3 +389,7 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
+
+.section-story {
+  padding: 15rem;
+  background-color: #f7f7f7; }
