--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,8 @@
 @import "components/composition";
 @import "components/button";
 @import "components/card";
+@import "components/story";
+
 
 @import "layout/header";
 @import "layout/grid";
