New Update SASS

--- a/sass/base/_tipography.scss
+++ b/sass/base/_tipography.scss
@@ -47,13 +47,13 @@ body {
 }
 
 .heading-tertiary {
-    font-size: $defaoult-font-size;
+    font-size: $defoult-font-size;
     font-weight: 700;
     text-transform: uppercase;
 }
 
 .paragraph {
-    font-size: $defaoult-font-size;
+    font-size: $defoult-font-size;
 
     &:not(:last-child) {
         margin-bottom: 3rem;
