--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -66,7 +66,7 @@
   .btn-text {
      &:link,
      &:visited {
-        font-size: $defaoult-font-size;
+        font-size: $defoult-font-size;
         color: $color-primary;
         display: inline-block;
         text-decoration: none;
