--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/button";
 @import "components/card";
 @import "components/story";
+@import "components/bg-video";
 
 
 @import "layout/header";
